force-app/main/default/objects/ApexManagedSharingControlSetting__c/ApexManagedSharingControlSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>ApexManagedSharingControlSetting</label>
</CustomObject>