force-app/main/default/objects/ApexManagedSharingControlSetting__c/fields/Email_Ids__c.field-meta.xml
<CustomField>
    <fullName>Email_Ids__c</fullName>
    <description>A comma separated list of email id to be notified in case of failure. Value must be specified if Send Failure Emails is enabled.</description>
    <inlineHelpText>A comma separated list of email id to be notified in case of failure. Value must be specified if Send Failure Emails is enabled.</inlineHelpText>
    <label>Email Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>