force-app/main/default/objects/ApexManagedSharingControlSetting__c/fields/Send_Failure_Emails__c.field-meta.xml
<CustomField>
    <fullName>Send_Failure_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Failure Emails</label>
    <type>Checkbox</type>
</CustomField>