force-app/main/default/objects/ApexManagedSharingControlSetting__c/fields/Stop_Queueable_Jobs_For_Record_Sharing__c.field-meta.xml
<CustomField>
    <fullName>Stop_Queueable_Jobs_For_Record_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Queueable Jobs For Record Sharing</label>
    <type>Checkbox</type>
</CustomField>